argocd/memos/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memo
  namespace: memo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memo
  template:
    metadata:
      labels:
        app: memo
    spec:
      containers:
      - name: memo
        image: neosmemo/memos:stable
        ports:
        - containerPort: 5230
        volumeMounts:
        - name: memo-data
          mountPath: /var/opt/memos
        limits:
          memory: "512Mi"
      volumes:
      - name: memo-data
        persistentVolumeClaim:
          claimName: memo-claim  # Name of your PVC

---

apiVersion: v1
kind: Service
metadata:
  name: memo
  namespace: memo
spec:
  selector:
    app: memo
  ports:
  - protocol: TCP
    port: 5230  # The port your service will expose
    targetPort: 5230  # The port the container is listening on
  type: ClusterIP
