argocd/memos/webhook-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectsync
  namespace: memo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projectsync
  template:
    metadata:
      labels:
        app: projectsync
    spec:
      containers:
      - name: projectsync
        image: projectorangejuice/projectsync:latest
---

apiVersion: v1
kind: Service
metadata:
  name: projectsync
  namespace: memo
spec:
  selector:
    app: projectsync
  ports:
  - protocol: TCP
    port: 8080  # The port your service will expose
    targetPort: 8080  # The port the container is listening on
  type: ClusterIP
