argocd/memos/ingress-memo.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memo
  namespace: memo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`memo.projectkube.com`)
      kind: Rule
      services:
        - name: memo
          port: 5230
